--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,149 @@
 <body>
 
 	<!-- Custom HTML -->
+	<header>
+		<div class="container">
+			<div class="row justify-content-between">
+				<div class="col-md-3">
+					<a href="#"><div class="logo">BAK-ONE</div></a>
+
+					<div class="logo-top">One Page Flat Template</div>
+				</div>
+				<div class="col-md-5">
+					<ul>
+						<li><a href="#">HOME</a></li>
+						<li><a href="#">PORTFOLIO</a></li>
+						<li><a href="#">ABOUT</a></li>
+						<li><a href="#">CONTACT</a></li>
+					</ul>
+				</div>
+				
+			</div>
+		</div>
+	</header>
+
+	<div class="header-wrapper">
+		<div class="container">
+			<div class="row text-center">
+				<div class="col-md-8 offset-md-2">
+					<div class="header-img">
+						<h1>We Build <span>Brand</span></h1>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+						<div class="button">LEARN MORE</div>
+						<div class="arrow"><i class="fas fa-chevron-circle-down"></i></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="portfolio">
+		<div class="container">
+			<div class="row text-center">
+				<div class="col-12">
+					<h2>Portfolio</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+					<ul>
+						<li><a class="portfolio-button" href="#">All</a></li>
+						<li><a class="portfolio-button" href="#">WEB DESIGN</a></li>
+						<li><a class="portfolio-button" href="#">GRAPHIC DESIGN</a></li>
+						<li><a class="portfolio-button" href="#">FLAT DESIGN</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="row text-center">
+				<div class="col-3">
+					<div class="port">
+						<div class="search">
+							<i class="fas fa-search"></i>
+							<h3 class="portfolio-title">Example Title</h3>
+							<p class="portfolio-description">Web Design</p>
+						</div>
+						<img class="portfolio-img" src="../img/img-1.png" alt="">
+
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="port">
+						<div class="search">
+							<i class="fas fa-search"></i>
+							<h3 class="portfolio-title">Example Title</h3>
+							<p class="portfolio-description">Web Design</p>
+						</div>
+						<img class="portfolio-img" src="../img/img-2.png" alt="">
+
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="port">
+						<div class="search">
+							<i class="fas fa-search"></i>
+							<h3 class="portfolio-title">Example Title</h3>
+							<p class="portfolio-description">Web Design</p>
+						</div>
+						<img class="portfolio-img" src="../img/img-3.png" alt="">
+
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="port">
+						<div class="search">
+							<i class="fas fa-search"></i>
+							<h3 class="portfolio-title">Example Title</h3>
+							<p class="portfolio-description">Web Design</p>
+						</div>
+						<img class="portfolio-img" src="../img/img-4.png" alt="">
+
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="port">
+						<div class="search">
+							<i class="fas fa-search"></i>
+							<h3 class="portfolio-title">Example Title</h3>
+							<p class="portfolio-description">Web Design</p>
+						</div>
+						<img class="portfolio-img" src="../img/img-5.png" alt="">
+
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="port">
+						<div class="search">
+							<i class="fas fa-search"></i>
+							<h3 class="portfolio-title">Example Title</h3>
+							<p class="portfolio-description">Web Design</p>
+						</div>
+						<img class="portfolio-img" src="../img/img-6.png" alt="">
+
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="port">
+						<div class="search">
+							<i class="fas fa-search"></i>
+							<h3 class="portfolio-title">Example Title</h3>
+							<p class="portfolio-description">Web Design</p>
+						</div>
+						<img class="portfolio-img" src="../img/img-1.png" alt="">
+
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="port">
+						<div class="search">
+							<i class="fas fa-search"></i>
+							<h3 class="portfolio-title">Example Title</h3>
+							<p class="portfolio-description">Web Design</p>
+						</div>
+						<img class="portfolio-img" src="../img/img-3.png" alt="">
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
 	<div class="about">
 		<div class="container">
 			<div class="row text-center">
@@ -87,6 +230,31 @@
 						<p class="description">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
 					</div>
 				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="contact">
+	<div class="container">
+		<div class="row text-center">
+			<div class="col-12">
+				<h2>Contact Us</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				sssssssssssssssssssss
+
+			</div>
+			<div class="col-md-6">
+				<p>INFORMATION</p>
+				<p class="contact-adr"><i class="fas fa-map-marker-alt"></i> Bak-One Company 12345 Hollywood Bvld Street Los Angeles, California</p>
+				<p class="contact-phone"><i class="fas fa-phone-square"></i> +444 (Phone) 123456</p>
+				<p class="contact-fax"><i class="fas fa-print"></i> +123 (FAX) 0011223</p>
+				<p class="contact-email"><i class="far fa-envelope"></i> info@bak-onecompany.com</p>
+
 			</div>
 		</div>
 	</div>
