--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,6 @@
 	<!-- Custom Browsers Color End -->
 
 	<link rel="stylesheet" href="css/main.min.css">
-	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
 </head>
 
@@ -69,19 +68,21 @@
 	<div class="portfolio">
 		<div class="container">
 			<div class="row text-center">
-				<div class="col-12">
-					<h2>Portfolio</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-					<ul>
-						<li><a class="portfolio-button" href="#">All</a></li>
-						<li><a class="portfolio-button" href="#">WEB DESIGN</a></li>
-						<li><a class="portfolio-button" href="#">GRAPHIC DESIGN</a></li>
-						<li><a class="portfolio-button" href="#">FLAT DESIGN</a></li>
-					</ul>
+				<div class="col">
+					<div class="filt">
+						<h2>Portfolio</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+						<ul>
+							<li><a class="portfolio-button" href="#">All</a></li>
+							<li><a class="portfolio-button" href="#">WEB DESIGN</a></li>
+							<li><a class="portfolio-button" href="#">GRAPHIC DESIGN</a></li>
+							<li><a class="portfolio-button" href="#">FLAT DESIGN</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<div class="row text-center">
-				<div class="col-3">
+				<div class="col-md-3">
 					<div class="port">
 						<div class="search">
 							<i class="fas fa-search"></i>
@@ -92,7 +93,7 @@
 
 					</div>
 				</div>
-				<div class="col-3">
+				<div class="col-md-3">
 					<div class="port">
 						<div class="search">
 							<i class="fas fa-search"></i>
@@ -103,7 +104,7 @@
 
 					</div>
 				</div>
-				<div class="col-3">
+				<div class="col-md-3">
 					<div class="port">
 						<div class="search">
 							<i class="fas fa-search"></i>
@@ -114,7 +115,7 @@
 
 					</div>
 				</div>
-				<div class="col-3">
+				<div class="col-md-3">
 					<div class="port">
 						<div class="search">
 							<i class="fas fa-search"></i>
@@ -125,7 +126,7 @@
 
 					</div>
 				</div>
-				<div class="col-3">
+				<div class="col-md-3">
 					<div class="port">
 						<div class="search">
 							<i class="fas fa-search"></i>
@@ -136,7 +137,7 @@
 
 					</div>
 				</div>
-				<div class="col-3">
+				<div class="col-md-3">
 					<div class="port">
 						<div class="search">
 							<i class="fas fa-search"></i>
@@ -147,7 +148,7 @@
 
 					</div>
 				</div>
-				<div class="col-3">
+				<div class="col-md-3">
 					<div class="port">
 						<div class="search">
 							<i class="fas fa-search"></i>
@@ -158,7 +159,7 @@
 
 					</div>
 				</div>
-				<div class="col-3">
+				<div class="col-md-3">
 					<div class="port">
 						<div class="search">
 							<i class="fas fa-search"></i>
@@ -245,20 +246,39 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				sssssssssssssssssssss
+				<form action="#">
+					<input type="username" placeholder="Your name">
+					<input type="email" placeholder="Your email">
+					<br>
+					<textarea placeholder="Your message"></textarea>
+					<br>
+					<input type="submit" class="button">
+				</form>
 
 			</div>
 			<div class="col-md-6">
-				<p>INFORMATION</p>
-				<p class="contact-adr"><i class="fas fa-map-marker-alt"></i> Bak-One Company 12345 Hollywood Bvld Street Los Angeles, California</p>
-				<p class="contact-phone"><i class="fas fa-phone-square"></i> +444 (Phone) 123456</p>
-				<p class="contact-fax"><i class="fas fa-print"></i> +123 (FAX) 0011223</p>
-				<p class="contact-email"><i class="far fa-envelope"></i> info@bak-onecompany.com</p>
-
+				<div class="contact-info">
+					<p>INFORMATION</p>
+					<p class="contact-info-adr">Bak-One Company <br>12345 Hollywood Bvld Street Los Angeles, California</p>
+					<p class="contact-info-phone">+444 (Phone) 123456</p>
+					<p class="contact-info-fax">+123 (FAX) 0011223</p>
+					<p class="contact-info-email">info@bak-onecompany.com</p>
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
+
+<footer class="footer">
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<div class="footer-copy">© Copyright 2013 Bak-One  |  One Page Flat Template</div>
+			</div>
+		</div>
+	</div>
+
+</footer>
 
 <script src="js/scripts.min.js"></script>
 
